--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             try {
                 // Send request to FastAPI backend
-                const response = await fetch("http://127.0.0.1:8000/predict", {
+                const response = await fetch("https://iris-model-production.up.railway.app/predict", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
